--- a/app/src/main/res/layout/fragment_sad.xml
+++ b/app/src/main/res/layout/fragment_sad.xml
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SadFragment">
+    android:gravity="center"
+    android:orientation="vertical"
+    android:background="#E3F2FD"> <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="😢"
+    android:textSize="100sp" />
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="אני מרגיש קצת עצוב..."
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-</FrameLayout>
+</LinearLayout>
