--- a/app/src/main/res/layout/fragment_neutral.xml
+++ b/app/src/main/res/layout/fragment_neutral.xml
@@ -10,6 +10,7 @@
     android:textSize="100sp" />
 
     <TextView
+        android:id="@+id/tvMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="הכל רגיל אצלי"
